--- a/StravaRunVisualiser/build.gradle
+++ b/StravaRunVisualiser/build.gradle
@@ -20,4 +20,7 @@ dependencies {
     // https://mvnrepository.com/artifact/org.json/json
     compile group: 'org.json', name: 'json', version: '20090211'
 
+    // https://mvnrepository.com/artifact/commons-httpclient/commons-httpclient
+    compile group: 'commons-httpclient', name: 'commons-httpclient', version: '3.1'
+
 }
