--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
 
 StravaRunVisualiser/src/main/java/api/Tokens.java
 StravaRunVisualiser/out/production/classes/api/Tokens.class
+StravaRunVisualiser/src/main/java/api/Tokens.java
