Adding old programs from testing / prac github

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,4 @@ StravaRunVisualiser/src/main/java/api/Tokens.java
 StravaRunVisualiser/out/production/classes/api/Tokens.class
 StravaRunVisualiser/src/main/java/api/Tokens.java
 *.pyc
+*.class
