--- a/ChessGame/makefile
+++ b/ChessGame/makefile
@@ -1,4 +1,4 @@
 all: main
 
 main: main.cpp
-	g++ Pieces/Pawn.cpp Pieces/PieceType.cpp Board.cpp Game.cpp Main.cpp -o Main.exe
+	g++ Pieces/Pawn.cpp Pieces/PieceType.cpp Pieces/Diagonal.cpp Pieces/HorizontalVertical.cpp Board.cpp Game.cpp Main.cpp -o Main.exe
