--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,4 @@ StravaRunVisualiser/out/production/classes/api/Tokens.class
 StravaRunVisualiser/src/main/java/api/Tokens.java
 *.pyc
 *.class
+*.exe
